# webauthn-demo

./: .gitignore  README.md  demo  docker-compose.yaml
rust-webauthn/: Cargo.toml  README.md  services.sh
rust-webauthn/src/: errors.rs  lib.rs  main.rs
rust-webauthn/src/cbor/: algs.rs  errors.rs  keys.rs  mod.rs
rust-webauthn/src/config/: app_config.rs  handlers.rs  mod.rs  routes.rs
rust-webauthn/src/data_services/: cache.rs  data_services.rs  mod.rs
rust-webauthn/src/services/: cache.rs  data_services.rs  mod.rs
rust-webauthn/src/utils/: b64.rs  make_id.rs  mod.rs
rust-webauthn/src/webauthn/: handlers.rs  mod.rs  routes.rs
rust-webauthn/src/webauthn/handlers/: assertion_challenge.rs  assertion_response.rs  check_user.rs  creation_challenge.rs  creation_response.rs  credential_challenge.rs  credential_response.rs  mod.rs  register_challenge_request.rs  register_challenge_response.rs
rust-webauthn/src/webauthn/model/: attestatin_conveyence_preference.rs  attestation.rs  attestation_statement.rs  authenticator_assertion_response.rs  authenticator_data.rs  (+19 more)
rust-webauthn/static/: welcome.html
rust-webauthn/test_data/: platform-attestation-response.json
server/: Cargo.toml  README.md  example.env  package-lock.json  package.json  server.js  services.sh
server/src/: errors.rs  lib.rs  main.rs
server/src/api/: mod.rs  routes.rs
server/src/cbor/: common.rs
server/src/config/: app_config.rs  handlers.rs  mod.rs  routes.rs
server/src/cose/: algs.rs  common.rs  keys.rs
server/src/mds/: errors.rs  fetch_mds.rs  mod.rs  verify_jwt.rs
server/src/services/: cache.rs  data_services.rs  db.rs  mod.rs  session.rs
server/src/utils/: b64.rs  from_session.rs  make_id.rs  mod.rs
server/src/webauthn/: routes.rs
server/static/: 404.html
server/test_data/: cross-platform-attestation-response.json  passkey.json  passkey_attestation.b64  platform-assertion-response.json
(+93 files in other folders)
