[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-session = { version = "0.6.2", features = ["cookie-session", "redis-rs-session"] }
actix-web = "4.0.1"
base64 = "0.13.0"
base64urlsafedata = "0.1.0"
cbor-codec = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
get_if_addrs = "0.5.3"
log = "0.4.17"
openssl = "0.10.40"
redis = {version = "0.21.5", features = ["tokio-comp", "connection-manager"]}
ring = "0.16.20"
serde = {version = "1.0.137", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.81"
serde_repr = "0.1.8"
serde-stuff = { git = "https://github.com/dskyberg/serde-stuff" }
serde_with = {version = "1.13.0", features = ["base64"] }
thiserror = "1.0.31"
url = { version = "2.2.2", features = ["serde"] }
